:bug: Fix overflow cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,6 @@ color:#0065FC;
 height: 90px;
 position:relative;
 overflow: hidden;
-border-radius: 20px 20px 0px 0px;
 }
 
 .accommodation-card-image img{
